# acc-temporal-vehicle

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
acc/: _vlang.py  cli.py  constants.py  controller.py  data.py  dynamics.py  eval.py  gradnorm.py  initial_set.py  io.py  mpc_oracle.py  presenters.py  sampler_pgd.py  tune.py  vehicle_check.py  verifier.py
acc/analysis/: _acc_sweep.py  _data.py  _metrics.py  _plotting.py  _summary.py  archcomp.py  compare.py  deep_eval.py  formal_vs_empirical.py  scenarios.py
acc/commands/: analyze.py  analyze_archcomp.py  analyze_deep.py  analyze_formal.py  compare.py  evaluate.py  generate_mpc_data.py  train_bc.py  train_sfo.py  train_stl.py  tune_bc.py  tune_sfo.py  tune_stl.py  validate.py  validate_published.py
checkpoints/: sfo_finetuned.pt  sfo_trained.pt  stl_finetuned.pt  stl_trained.pt
scripts/: run_pipeline.py
specs/: acc_safety.vcl  acc_safety_sfo.vcl  acc_safety_sfo_finetune.vcl
tests/: test_dynamics.py  test_jax_matches_pytorch.py  test_plant_consistency.py
