[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "matplotlib>=3.9.4",
  "pandas>=3.0.3",
  "seaborn>=0.13.2",
  "tqdm>=4.67.3"
]

[project]
dependencies = [
  "torch>=2.2",
  "numpy>=1.26",
  "onnx>=1.15",
  "onnxruntime>=1.17",
  "rich>=13.7",
  "typer>=0.12",
  "jaxtyping>=0.2.28",
  "requests>=2.31",
  "vehicle-lang[pytorch]",
  "immrax",
  "property-driven-ml",
  "optuna>=4.8.0",
  "optunahub>=0.4.0",
  "cmaes>=0.13.0",
  "scipy>=1.16.3",
  "pre-commit>=4.6.0",
  "toml-sort>=0.24.4",
  "pyright>=1.1.409"
]
description = "ACC case study: train-then-verify with STL and SFO objectives"
name = "acc-temporal-vehicle"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
acc = "acc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["acc"]

[tool.pyright]
reportPrivateImportUsage = false

[tool.ruff.lint]
ignore = ["F722"]

[tool.uv.sources]
vehicle-lang = {editable = true, path = "../vehicle/vehicle-python"}
